[package]
name = "paynow"
description = "Rust support for Paynow Zimbabwe's HTTP API"
version = "0.1.2-alpha.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/rushmorem/paynow"
documentation = "https://docs.rs/paynow"
readme = "README.md"
keywords = ["payment", "gateway"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
celes = "1.0.6"
reqwest = "0.11.0"
rust_decimal = "1.9.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_urlencoded = "0.7.0"
sha2 = "0.9.2"
thiserror = "1.0.23"
time = { version = "0.2.24", features = ["serde"] }
url = { version = "2.2.0", features = ["serde"] }
uuid = "0.8.1"

[dev-dependencies]
envy = "0.4.2"
tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
