[package]
name = "paynow"
description = "Rust support for Paynow Zimbabwe's HTTP API"
version = "0.1.2-alpha.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/rushmorem/paynow"
documentation = "https://docs.rs/paynow"
readme = "README.md"
keywords = ["payment", "gateway"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.48"
celes = "1.0.6"
reqwest = "0.11.2"
rust_decimal = "1.10.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_urlencoded = "0.7.0"
sha2 = "0.9.3"
thiserror = "1.0.24"
time = { version = "0.2.26", features = ["serde"] }
url = { version = "2.2.1", features = ["serde"] }
uuid = "0.8.2"

[dev-dependencies]
envy = "0.4.2"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
