[package]
name = "paynow"
description = "Rust support for Paynow Zimbabwe's HTTP API"
version = "0.2.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/rushmorem/paynow"
documentation = "https://docs.rs/paynow"
readme = "README.md"
keywords = ["payment", "gateway"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.57"
celes = "2.2.0"
reqwest = "0.11.11"
rust_decimal = "1.26.1"
serde = { version = "1.0.142", features = ["derive"] }
serde_urlencoded = "0.7.1"
sha2 = "0.10.2"
thiserror = "1.0.32"
time = { version = "0.3.12", features = ["serde", "formatting"] }
url = { version = "2.2.2", features = ["serde"] }
uuid = "1.1.2"

[dev-dependencies]
envy = "0.4.2"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
